フッターを変更

--- a/index.html
+++ b/index.html
@@ -199,10 +199,10 @@
     <section class="social-section">
         <div class="container">
             <h2 class="mb-4">SNSで最新情報をチェック</h2>
-            <a href="https://twitter.com/utakatablog2" class="btn btn-twitter mx-2" target="_blank" rel="noopener noreferrer">
+            <a href="https://twitter.com/utakatablog2" class="btn btn-twitter mx-2 my-1" target="_blank" rel="noopener noreferrer">
                 Xでフォローする
             </a>
-            <a href="https://note.com/pecosan0810" class="btn btn-note mx-2" target="_blank" rel="noopener noreferrer">
+            <a href="https://note.com/pecosan0810" class="btn btn-note mx-2 my-1" target="_blank" rel="noopener noreferrer">
                 noteを読む
             </a>
         </div>
@@ -210,7 +210,7 @@
 
     <footer>
         <div class="container">
-            <p>&copy; 2025 Memories To-Go. All Rights Reserved.</p>
+            <p>&copy; 2025 <a href="https://memoriesto-go.com" target="_blank" rel="noopener noreferrer" style="color: white; text-decoration: none;">ウタカタブログ</a>. All Rights Reserved.</p>
         </div>
     </footer>
 
