楽天アフィ

--- a/index.html
+++ b/index.html
@@ -142,6 +142,15 @@
             <div class="col-md-6">
                 <div class="card h-100">
                     <div class="card-body d-flex flex-column">
+                        <h5 class="card-title">【完全保存版】AI×楽天アフィリエイトの教科書</h5>
+                        <p class="card-text flex-grow-1">知識ゼロから月5万円稼ぐための全知識を解説。</p>
+                        <a href="https://memoriesto-go.com/archives/rakutenaffiliate.html" class="btn btn-custom text-white mt-auto align-self-center" target="_blank" rel="noopener noreferrer">記事を読む</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-6">
+                <div class="card h-100">
+                    <div class="card-body d-flex flex-column">
                         <h5 class="card-title">【徹底比較】ハピタスとモッピーはどっちが稼げる？</h5>
                         <p class="card-text flex-grow-1">月10万円稼ぐ筆者が本音でレビュー。あなたに合ったポイ活サイトが見つかります。</p>
                         <a href="https://memoriesto-go.com/archives/poikatsu.html" class="btn btn-custom text-white mt-auto align-self-center" target="_blank" rel="noopener noreferrer">記事を読む</a>
@@ -175,9 +184,9 @@
                     </div>
                 </div>
             </div>
-            <div class="col-md-12">
+            <div class="col-md-6">
                 <div class="card h-100">
-                    <div class="card-body d-flex flex-column text-center">
+                    <div class="card-body d-flex flex-column">
                         <h5 class="card-title">【noteマガジン】楽天ROOM収益化ノウハウ</h5>
                         <p class="card-text flex-grow-1">楽天ROOMの収益化に関する有料級の情報をnoteマガジンでまとめています。</p>
                         <a href="https://note.com/pecosan0810/m/mc6085ca3d94e" class="btn btn-custom text-white mt-auto align-self-center" target="_blank" rel="noopener noreferrer">noteで読む</a>
